bk_ida/gccida/c3/precompute_register_parameters
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/precompute_register_parameters/src/calls.c:1333:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( args[i].tree_value->common.type->block.abstract_origin)) >> 1), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/precompute_register_parameters/src/obj/calls.o] Error 1
